--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -842,8 +842,7 @@ ul, li {
   height: 1px;
 }
 .container_web main .wrapper_about .layout .title_about .content {
-  margin: 15px 0 0 0;
-  padding: 8px 0;
+  margin: 15px 0 10px 0;
   font-size: 16px;
   line-height: 1.8;
   display: -webkit-box; /* Sử dụng box layout của Webkit */
@@ -1449,9 +1448,12 @@ ul, li {
   display: flex;
   align-items: center;
 }
+.environment_list .item_environment {
+  width: 25%;
+}
 .environment_list .item_environment img {
   width: 100%;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 /*# sourceMappingURL=app.css.map */
