--- a/src/resources/views/about.hbs
+++ b/src/resources/views/about.hbs
@@ -2,33 +2,33 @@
     <div class="layout is-between">
         <div class="title_about">
             <div class="heading">
-                Who We Are
+                Chúng tôi là ai?
             </div>
             <div class="divider is-center">
                 <div class="line"></div>
             </div>
             <p class="content">
-                Xi'an Yuanqi Elevator Parts Co., Ltd. is a trading company that has been actively involved in the elevator industry for many years. The company is located in Xi'an, China, the starting point of the Silk Road. Our primary goal is to provide high quality elevator accessories, escalator accessories, electrical connection retrofit, elevator accessories/O0E and related products to global customers.
+                Công ty Thang Máy Việt Phát là đơn vị hàng đầu trong lĩnh vực cung cấp, lắp đặt và bảo trì thang máy tại Việt Nam. Với hơn nhiều năm kinh nghiệm, Việt Phát cam kết mang đến những giải pháp thang máy hiện đại, an toàn và thẩm mỹ, đáp ứng tối đa nhu cầu của khách hàng. Sản phẩm của công ty không chỉ đạt tiêu chuẩn quốc tế mà còn được tùy chỉnh để phù hợp với từng công trình cụ thể. Đội ngũ kỹ thuật viên chuyên nghiệp, tận tâm của Việt Phát luôn sẵn sàng đồng hành để mang lại trải nghiệm vượt trội và dịch vụ hậu mãi chu đáo. Việt Phát tự hào là đối tác đáng tin cậy, góp phần nâng cao giá trị công trình và cuộc sống.
             </p>
 
             <div class="quality_group is-between">
                 <div class="item_quality">
                     <i class="bi bi-gem"></i>
-                    Quality Products
+                    Sản phẩm chất lượng
                 </div>
                 <div class="item_quality">
                     <i class="bi bi-person-fill"></i>
-                    Professional Teams
+                    Đội ngũ chuyên nghiệp
                 </div>
                 <div class="item_quality">
                     <i class="bi bi-heart-fill"></i>
-                    Excellent Service
+                    Dịch vụ chu đáo
                 </div>
             </div>
         </div>
 
         <div class="wrapp_image_about">
-            <img src="/img/about/1.png" alt="">
+            <img src="/img/about/2.png" alt="">
         </div>
     </div>
 </div>
@@ -37,14 +37,14 @@
     <div class="wrapper">
         <div class="content">
             <div class="title">
-                Why Choose Us
+                Tại sao lại chọn chúng tôi
             </div>
             <div class="divider is-center">
                 <div class="line"></div>
             </div>
             <div class="layout">
                 <p>
-                     We have a wide range of products to meet the needs of various customers, From complete elevators to elevator parts and escalator parts widely used in the industry. We pride ourselves on having a diverse portfolio of key partner brands including Otis, THSEN, SCHNDLER, KONE, MTSUBSHLCG, HTACHI and many more. Our products are mainly exported to South America and Eastern European countries, where they have received positive responses from customers.
+                     Chúng tôi mang đến giải pháp thang máy toàn diện với chất lượng vượt trội, đảm bảo an toàn và thẩm mỹ tối ưu cho mọi công trình. Việt Phát tự hào sở hữu đội ngũ kỹ thuật viên giàu kinh nghiệm, dịch vụ hậu mãi tận tâm và thời gian thi công nhanh chóng. Sản phẩm của chúng tôi được thiết kế theo tiêu chuẩn quốc tế, tùy chỉnh linh hoạt để phù hợp với từng nhu cầu riêng biệt. Lựa chọn Việt Phát, bạn không chỉ nhận được một sản phẩm, mà còn cả sự đồng hành và cam kết bền vững.
                 </p>
             </div>
         </div>
@@ -54,11 +54,11 @@
 <div class="wrapper_about animation-top">
     <div class="layout is-between">
         <div class="wrapp_image_about">
-            <img src="/img/about/1.png" alt="">
+            <img src="/img/about/2.jpg" alt="">
         </div>
         <div class="title_about">
             <div class="heading">
-                Our Team
+                Đội ngũ nhân viên
             </div>
             <div class="divider is-center">
                 <div class="line"></div>
@@ -78,19 +78,18 @@
     <div class="wrapper" style="padding: 20px 0; margin: 0 0 20px 0;">
         <div class="content">
             <div class="title">
-                Work Environment
+                Môi trường làm việc
             </div>
             <div class="divider is-center">
                 <div class="line"></div>
             </div>
             <div class="layout">
                 <div class="environment_list">
-                    <div class="item_environment"><img src="/img/about/1_15.webp" alt=""></div>
-                    <div class="item_environment"><img src="/img/about/1_15.webp" alt=""></div>
-                    <div class="item_environment"><img src="/img/about/1_15.webp" alt=""></div>
-                    <div class="item_environment"><img src="/img/about/1_15.webp" alt=""></div>
+                    <div class="item_environment"><img src="/img/about/3.jpg" alt=""></div>
+                    <div class="item_environment"><img src="/img/about/4.jpg" alt=""></div>
+                    <div class="item_environment"><img src="/img/about/5.jpg" alt=""></div>
+                    <div class="item_environment"><img src="/img/about/7.jpg" alt=""></div>
                 </div>
-                
             </div>
         </div>
     </div>
@@ -108,8 +107,9 @@
             <div class="item_environment"><img src="/img/about/1.jpg" alt=""></div>
             <div class="item_environment"><img src="/img/about/1.jpg" alt=""></div>
             <div class="item_environment"><img src="/img/about/1.jpg" alt=""></div>
+            <div class="item_environment"><img src="/img/about/1.jpg" alt=""></div>
         </div>
-        <p style="text-align: center; margin-top: 15px">As a company, we have grown steadily in size and revenue.  Our export value of RMB 300 million in 2022 is a testament to our commitment to serve our customers better.</p>
+        <p style="text-align: center; margin-top: 15px">Với tư cách là một công ty, chúng tôi đã tăng trưởng đều đặn về quy mô và doanh thu. Với mục tiêu bao phủ toàn Việt Nam và có thể mở rộng xuất khẩu trong tương lai gần</p>
     </div>
 </div>
 
@@ -117,17 +117,17 @@
     <div class="wrapper" style="padding: 20px 0; margin: 0;">
         <div class="content">
             <h3 class="title">
-                Welcome To Cooperation
+                Chào mừng hợp tác
             </h3>
             <div class="divider is-center">
                 <div class="line"></div>
             </div>
             <div class="layout">
                 <p>
-                     In conclusion, Xi'an Yuanqi Elevator Parts Co., Ltd. is a reliable and trustworthy company that focuses on providing excellent service to its customers. We pride ourselves on providing high-quality products, excellent customer service and reliable after-sales support.
+                    Chào mừng Quý đối tác đến với Thang Máy Việt Phát! Chúng tôi rất vinh hạnh khi được trở thành người bạn đồng hành đáng tin cậy trên hành trình phát triển của Quý vị. Với sự cam kết về chất lượng, sáng tạo và dịch vụ tận tâm, Việt Phát luôn nỗ lực mang đến những giá trị vượt ngoài mong đợi. Sự hợp tác này không chỉ là cơ hội để cùng nhau xây dựng những công trình hiện đại, mà còn là nền tảng cho một mối quan hệ bền vững, lâu dài. Chúng tôi tin rằng sự đồng hành của Quý vị chính là động lực để Việt Phát ngày càng phát triển mạnh mẽ hơn. Chúc cho sự hợp tác của chúng ta đạt nhiều thành công tốt đẹp!
                 </p>
                 <p class="hight_lisht" style="font-style:italic ; color:#2f904b;">
-                    If you are engaged in the elevator     industry and need reliable products, please feel free to contact us. We will be more than happy to serve you.
+                    Nếu bạn đang tham gia vào ngành thang máy và cần sản phẩm đáng tin cậy, vui lòng liên hệ với chúng tôi. Chúng tôi sẽ rất vui lòng được phục vụ bạn.
                 </p>
                 <div class="btn-contact-us is-center">
                     <a href="/contact"><i class="bi bi-arrow-right-square-fill"></i>Contact Now</a>
