--- a/src/resources/views/news/detail.hbs
+++ b/src/resources/views/news/detail.hbs
@@ -1,38 +1,12 @@
 <div class="layout wrapper_detail_news">
-    <h3>What is the structure of FUJISJ Escalator Handrails?</h3>
+    <h3 class="subject_article_detail"></h3>
     <hr>
     <div class="content">
-        <p>FUJISJ Escalator Handrail Belt ———– Super durability with 200,000 times of crack-free use.</p>
-        <p>
-            <strong>Coating:</strong><br>
-            • Antioxidant, smooth, wear-resistant, and corrosion-resistant<br>
-            • Adopting polysilazane (PSZ), which is the best antioxidant and anti-corrosion material in China, with higher cost and better quality
-        </p>
-        <p>
-            <strong>Face Glue:</strong><br>
-            • SBR and CM combined with new process, with excellent fire prevention, UV protection and anti-aging performance<br>
-            • The origin of rubber comes from Hainan, China, which is the highest grade rubber material in China, with better stability, elasticity, and better adhesion
-        </p>
-        <p>
-            <strong>Steel Wire Curtain:</strong><br>
-            • Steel wire combination at 18*9s, which is the most wear-resistant and rensile material in China<br>
-            • Better tensile and bending fatigue resistance
-        </p>
-        <p>
-            <strong>Skeleton Layer:</strong><br>
-            • Use the most stable material in China: Nylon polyester blended fabric<br>
-            • Overlay technique, more suitable hardness and stronger tensile resistance
-        </p>
-        <p>
-            <strong>Slide Layer:</strong><br>
-            • Use high-strength nylon fabric, which is the thickest, toughest, and most wear-resistant material in China, with greater friction and wear resistance<br>
-            • Provide customized canvas and polyester short fiber materials
-        </p>
-        <p>We offer products of various specification to meet your needs. We will also provide customized products according to your special needs, including appearance colors, sliding layer materials, etc.</p>
-        <div class="wrapper is-center">
-            <img src="/img/news/2.jpg" alt="">
+        <p class="detail_content_new"></p>
+        <div class="wrapper is-center article_thumbnail_1">
+            
         </div>
         <hr>
-        <p>Post time:Nov-26-2024</p>
+        <p class="time_news_detail"></p>
     </div>
 </div>
